--- a/css/style.css
+++ b/css/style.css
@@ -35,6 +35,11 @@ a {
 .logo-header {
   margin-top: 30px;
   width: 343px;
+  transition: all .6s ease-out;
+}
+
+.logo-header:hover{
+  opacity: .7;
 }
 .btn {
   color:#6699FF;
