--- a/css/style.css
+++ b/css/style.css
@@ -77,6 +77,7 @@ a {
 .talk {
   color: var(--orange);
 }
+
 .fab-text {
   text-align: right;
 }
@@ -97,7 +98,20 @@ a {
 
 }
 
-@media (max-width: 500px){
+.house-1 {
+  min-width: 335px;
+}
+
+@media (max-width: 1200px){
+  .h3-modern-house {
+    margin-top: 3rem;
+  }
+  .house-1 {
+    min-width: 100%;
+  }
+}
+
+@media (max-width: 576px){
   .logo-header{
     width: 60%;
   }
@@ -105,6 +119,8 @@ a {
     position: absolute;
     top: 35%;
     right: 5%;
-    
+  }
+  .talk, .talk-1 {
+    font-size: 80%;
   }
 }
