--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,10 @@
-
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;400;700&family=Roboto:wght@100;400;700&display=swap');
-
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;400;700&family=Roboto:wght@100;400;700&display=swap");
 
 :root {
   --bg-grad-90deg: linear-gradient(90deg, #111, #444, #111);
   --bg-grad-90deg-inv: linear-gradient(90deg, #555, #111, #555);
   --orange: #ff6600;
-  --blue: #6699FF;
+  --blue: #6699ff;
 }
 
 * {
@@ -14,12 +12,9 @@
   box-sizing: border-box;
 }
 
-
-
-
 body {
   box-sizing: border-box;
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
 }
 a {
   text-decoration: none;
@@ -31,7 +26,7 @@ a {
   margin-left: 15px;
   color: green;
   padding: 10px;
-  transition: all .3s ease-in-out;
+  transition: all 0.3s ease-in-out;
 }
 .fab:hover {
   color: #0f0;
@@ -42,7 +37,6 @@ a {
 
 .block-1 {
   /* border: 1px solid red; */
-  
 }
 
 .header {
@@ -52,18 +46,16 @@ a {
 .logo-header {
   margin-top: 30px;
   width: 343px;
-  transition: all .6s ease-out;
+  transition: all 0.6s ease-out;
 }
 
-.logo-header:hover{
-  opacity: .7;
+.logo-header:hover {
+  opacity: 0.7;
 }
 
 /* .active {
   color: #ff6600 !important;
 } */
-
-
 
 .chat {
   height: 55px;
@@ -89,7 +81,6 @@ a {
 
 /* Block 1 */
 
-
 .residencial-do-lago {
   font-size: 1.4rem;
   background: #0f0;
@@ -97,7 +88,6 @@ a {
   border-radius: 5px;
   white-space: nowrap;
   z-index: 10;
-
 }
 
 /* Section-2 */
@@ -105,14 +95,34 @@ a {
   height: 10%;
 }
 
+/* Section 3 */
 
-
-@media (max-width: 1200px){
-  
+.embed-responsive {
+  min-height: 400px;
 }
 
-@media (max-width: 576px){
-  .logo-header{
+.responsive-video {
+  position: relative;
+  padding-bottom: 56.25%;
+  padding-top: 60px;
+  overflow: hidden;
+}
+
+.responsive-video iframe,
+.responsive-video object,
+.responsive-video embed {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+@media (max-width: 1200px) {
+}
+
+@media (max-width: 576px) {
+  .logo-header {
     width: 60%;
   }
   .navbar-toggler {
@@ -120,7 +130,8 @@ a {
     top: 35%;
     right: 5%;
   }
-  .talk, .talk-1 {
+  .talk,
+  .talk-1 {
     font-size: 80%;
   }
 }
