--- a/css/style.css
+++ b/css/style.css
@@ -20,6 +20,18 @@ a {
   text-decoration: none;
 }
 
+.navbar-nav .nav-item .nav-link {
+  color: #6699ff;
+}
+
+.navbar-nav .nav-item .nav-link:hover {
+  color: #ff6600;
+}
+
+.navbar-nav .nav-item .active {
+  color: #ff6600 !important;
+}
+
 .fab {
   color: #ccc;
   font-size: 2rem;
@@ -52,10 +64,6 @@ a {
 .logo-header:hover {
   opacity: 0.7;
 }
-
-/* .active {
-  color: #ff6600 !important;
-} */
 
 .chat {
   height: 55px;
@@ -98,7 +106,7 @@ a {
 /* Section 3 */
 
 .thumb {
-  opacity: 0.8;
+  opacity: 0.85;
 }
 
 #project-link:hover .thumb {
